// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Group component Field group component props Can mark inner input as required 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-223"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="required block-input field-config field-config"
    id="control-223"
    onChange={[Function]}
    required={false}
    type="text"
  />
  
</div>
`;

exports[`Field Group component Field group component props Can show an input  1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-22"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="block-input field-config field-config"
    id="control-22"
    onChange={[Function]}
    required={false}
    type="text"
  />
  
</div>
`;

exports[`Field Group component Field group component props Help text is optional 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-21"
  >
    Who
  </label>
  <input
    aria-describedby={null}
    className="block-input field-config field-config"
    id="control-21"
    onChange={[Function]}
    required={false}
    type="text"
  />
  
</div>
`;

exports[`Field Group component Field group component props Works with help text 1`] = `
<div
  className="caldera-config-field"
>
  <label
    htmlFor="control-20"
  >
    Who
  </label>
  <input
    aria-describedby="control-20-description"
    className="block-input field-config field-config"
    id="control-20"
    onChange={[Function]}
    required={false}
    type="text"
  />
  <p
    className="description"
    id="control-20-description"
  >
    Who to say hi to
  </p>
</div>
`;
